Add travis ci setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,16 +12,21 @@ before_install:
   - docker-compose up -d
   - |
     ctr=0
-    max_retries=10
+    max_retries=30
     while [ $(curl -I -u "root:123qwe123" localhost:10080/users/sign_in | head -1 | grep 200 | wc -l | tr -d ' ') -ne 1 ]; do
       ctr=`expr $ctr + 1`
       echo waiting for gitlab to come up
-      sleep 5
+      sleep 10
       if [ $ctr == $max_retries ]; then
-        echo max retries ($max_retries) reached
+        echo "max retries (${max_retries}) reached"
         exit 1
       fi
     done
 
 script:
-  - make test
+  - make coverage
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash) # Set CODECOV_TOKEN in your environment variables.
+
+
