Refactor test codes and design

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,12 @@ before_install:
   - docker-compose up -d
   - |
     jq --version
+
+    source testdata/credentials.sh
+
     ctr=0
     max_retries=30
-    while [ $(curl -I -u "root:123qwe123" localhost:10080/users/sign_in | head -1 | grep 200 | wc -l | tr -d ' ') -ne 1 ]; do
+    while [ $(curl -I -u "${GITLAB_USERNAME}:${GITLAB_PASSWORD}" ${GITLAB_HTTP_URL}/users/sign_in | head -1 | grep 200 | wc -l | tr -d ' ') -ne 1 ]; do
       ctr=`expr $ctr + 1`
       echo waiting for gitlab to come up
       sleep 10
@@ -28,20 +31,13 @@ before_install:
         exit 1
       fi
     done
-    echo "============   installing jq     =============="
-    # mv ./testdata/jq-linux64 /usr/local/bin/jq 
-    # export PATH=$PATH:/usr/local/bin
-    # jq --version
     echo "============ setting up test data ============="
-    ./testdata/get_token.sh # creates the token.txt
-    ./testdata/seeder.sh # reads the token.txt
+    ./testdata/seeder.sh 
     echo "============ test data completed  ============="
 
 script:
   - |
-    cat token.txt
-    export GITLAB_OAUTH_TOKEN=$(./testdata/get_oauth_token.sh)
-    export GITLAB_PRIVATE_TOKEN=$(cat token.txt)
+    source testdata/credentials.sh
     make coverage
 
 after_success:
