Fix travisci build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,8 @@ before_install:
     echo "============ test data completed  ============="
 
 script:
-  - golint -set_exit_status
+  - go get github.com/golang/lint/golint
+  - golint -set_exit_status ./...
   - |
     source testdata/credentials.sh
     make coverage
