--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,9 @@ cookies.txt
 gitlabctl
 bin/
 
-# Test binary, build with `go test -c`
+# Test outputs, build with `go test -c`
 *.test
+testdocs
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
