Use official gitlab docker image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,83 +1,13 @@
-version: '3'
-
-volumes:
-  gitlab_postgresql:
-  gitlab_redis:
-  gitlab_data:
-  ldap_db:
-  ldap_static:
-
-networks:
-  adop:
-    driver: bridge
-
-services:
-  redis:
-    restart: always
-    image: sameersbn/redis:latest
-    command:
-    - --loglevel warning
-    volumes:
-    - gitlab_redis:/var/lib/redis:Z
-    networks:
-      - adop
-
-  postgresql:
-    restart: always
-    image: sameersbn/postgresql:9.6-2
-    volumes:
-    - gitlab_postgresql:/var/lib/postgresql:Z
-    environment:
-    - DB_USER=gitlab
-    - DB_PASS=password
-    - DB_NAME=gitlabhq_production
-    - DB_EXTENSION=pg_trgm
-    networks:
-      - adop
-
-  gitlab:
-    restart: always
-    image: sameersbn/gitlab:11.0.3
-    depends_on:
-    - redis
-    - postgresql
-    ports:
-    - "10080:80"
-    - "10022:22"
-    volumes:
-    - gitlab_data:/home/git/data:Z
-    networks:
-      - adop
-    environment:
-    - DEBUG=false
-    - DB_ADAPTER=postgresql
-    - DB_HOST=postgresql
-    - DB_PORT=5432
-    - DB_USER=gitlab
-    - DB_PASS=password
-    - DB_NAME=gitlabhq_production
-    - REDIS_HOST=redis
-    - REDIS_PORT=6379
-    - GITLAB_HTTPS=false
-    - SSL_SELF_SIGNED=false
-    - GITLAB_HOST=localhost
-    - GITLAB_PORT=10080
-    - GITLAB_SSH_PORT=10022
-    - GITLAB_RELATIVE_URL_ROOT=
-    - GITLAB_ROOT_PASSWORD=123qwe123
-    - GITLAB_SECRETS_DB_KEY_BASE=long-and-random-alphanumeric-string
-    - GITLAB_SECRETS_SECRET_KEY_BASE=long-and-random-alphanumeric-string
-    - GITLAB_SECRETS_OTP_KEY_BASE=long-and-random-alphanumeric-string
-    - LDAP_ENABLED=true
-    - LDAP_LABEL=LDAP
-    - LDAP_HOST=ldap
-    - LDAP_PORT=389
-    - LDAP_UID=uid
-    - LDAP_METHOD=plain
-    - LDAP_BIND_DN=cn=admin,dc=ldap,dc=adop,dc=com
-    - LDAP_PASS=123qwe123
-    - LDAP_ACTIVE_DIRECTORY=false
-    - LDAP_ALLOW_USERNAME_OR_EMAIL_LOGIN=false
-    - LDAP_BLOCK_AUTO_CREATED_USERS=false
-    - LDAP_BASE=dc=ldap,dc=adop,dc=com
-
+gitlab:
+  image: 'gitlab/gitlab-ce:latest'
+  restart: always
+  environment:
+    GITLAB_ROOT_PASSWORD: '123qwe123'
+    GITLAB_OMNIBUS_CONFIG: |
+      nginx['listen_port'] = 10080
+  ports:
+    - '10080:10080'
+  volumes:
+    - '/srv/gitlab/config:/etc/gitlab'
+    - '/srv/gitlab/logs:/var/log/gitlab'
+    - '/srv/gitlab/data:/var/opt/gitlab'
